# docs/swagger.yaml
@@ -1,4 +1,14 @@
 definitions:
+  dto.CreateGym:
+    properties:
+      address:
+        type: string
+      title:
+        type: string
+    required:
+      - address
+      - title
+    type: object
   dto.RefreshToken:
     properties:
       token:
@@ -52,6 +62,46 @@ definitions:
 info:
   contact: { }
 paths:
+  /api/v1/gym/create:
+    post:
+      consumes:
+        - application/json
+      description: creating a gym
+      parameters:
+        - description: gym info
+          in: body
+          name: input
+          required: true
+          schema:
+            $ref: '#/definitions/dto.CreateGym'
+      produces:
+        - application/json
+      responses:
+        "201":
+          description: ok
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+        - AdminAuth: [ ]
+      summary: Create Gym
+      tags:
+        - gym
   /api/v1/user/login:
     post:
       consumes:
